# hh_parser

./: .gitignore  README.md  main.py  main2.py  main3.py  main4.py  pyproject.toml
data/: .json  asdfg.json  file_1.xlsx  qqq.xlsx  qqqq.json  qqqqq.json  qwerty  test.json  test.xlsx  test_1.xlsx  vacancies.json  vacancies.xlsx  vacancies_example.json
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_logger_decorators_py.html  z_145eef247bfb46b6_logger_settings_py.html  z_7bd1d0d2126060e9___init___py.html  z_7bd1d0d2126060e9_vacancy_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_conftest_py.html  z_a44f0ac069e85531_test_api_py.html  z_a44f0ac069e85531_test_vacancy_processing_py.html  z_f0e24b7f04f99860___init___py.html  z_f0e24b7f04f99860_hh_py.html
src/: HH.py  Parser.py  file_worker.py  hh.py  json_denormalize.py  json_saver.py  logger_decorators.py  logger_settings.py  utils.py  vacancy.py
src/api/: abc_parser.py  hh.py
src/file_processing/: abc_file_worker.py  excel_worker.py  json_reader.py  json_saver.py  json_worker.py
src/ui/: ui.py
src/vacancy_processing/: abc_vacancy_worker.py  vacancy.py
tests/: conftest.py  test_api.py  test_file_worker.py  test_vacancy_processing.py  vacancies_example.json
