[tool.poetry]
name = "hh-parser"
version = "0.1.0"
description = ""
authors = ["kirill_barkhatov <k.s.barkhatov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
types-requests = "^2.32.0.20240712"
pandas-stubs = "^2.2.2.240807"
numpy = "^2.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
mypy = "^1.11.1"
black = "^24.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

[tool.black]
line-length = 119
exclude = '''
(
  /(
      \.eggs         # Исключить несколько общих каталогов
    | \.git          # в корне проекта
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
)
'''

[tool.isort]
line_length = 119

[tool.coverage.run]
omit = [
    # omit anything in a .local directory anywhere
#    "*/.local/*",
    # omit everything in /usr
#    "/usr/*",
    # omit this single file
    # не тестируем абстрактные классы и работу с пользователем
    "src/vacancy_processing/abc_vacancy_worker.py",
    "src/ui/abc_user_interface.py",
    "src/api/abc_parser.py",
    "src/vacancy_processing/abc_vacancy_worker.py",
    "main.py"
    ]
